fix z-index #header

--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -169,7 +169,7 @@ html.js #header {
   width: 100%;
   top: 0;
   left: 0;
-  z-index: 999;
+  z-index: 198;
 }
 
 #search-bar {
